--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,22 @@
     <groupId>com.zhc</groupId>
     <artifactId>demo_springmvc1</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.0.5.RELEASE</version>
+            <version>5.1.5.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>5.0.5.RELEASE</version>
+            <version>5.1.5.RELEASE</version>
         </dependency>
         <!--servlet api-->
         <dependency>
@@ -38,6 +44,40 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <!--jackson-->
+        <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.9.0</version>
+        </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <!--tomcat7插件-->
+            <plugin>
+              <groupId>org.apache.tomcat.maven</groupId>
+              <artifactId>tomcat7-maven-plugin</artifactId>
+              <version>2.2</version>
+              <configuration>
+                <!--指定端口-->
+                <port>80</port>
+                <!--默认编码-->
+                <uriEncoding>utf-8</uriEncoding>
+                <!--项目虚拟目录-->
+                <path>/</path>
+              </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
